--- a/pom.xml
+++ b/pom.xml
@@ -25,16 +25,24 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+		</dependency> -->
+		
+		<!-- add following dependency under dependencies section -->
+	   <dependency>
+	       <groupId>javax.servlet</groupId>
+	       <artifactId>javax.servlet-api</artifactId>
+	       <version>3.1.0</version>
+	       <scope>provided</scope>
+	   </dependency>
+	   <dependency>
+	       <groupId>org.springframework.boot</groupId>
+	       <artifactId>spring-boot-starter-test</artifactId>
+	       <scope>test</scope>
+	  </dependency>
+		
 	</dependencies>
 
 	<build>
